--- a/ex6_eventos/ex6.html
+++ b/ex6_eventos/ex6.html
@@ -6,9 +6,11 @@
 	<script type="text/javascript" src="ex6.js"></script>
 </head>
 
-<body onload="arrancamos()">
+<body onload="loading()">
 
-	<button  onmouseover="paseando()">Pasa por aquí </button>
+	<button  onmouseover="uno()">Boton1 hover </button>
+	<button  onmouseover="dos()">Boton2 hover </button>
+	<button  onmouseover="tres()">Boton3 hover </button>
 
 </body>
 </html>
