--- a/ex9_innerHTML/ex9.html
+++ b/ex9_innerHTML/ex9.html
@@ -6,11 +6,17 @@
 	<script type="text/javascript" src="ex9.js"></script>
 </head>
 
-<body>
+<body id="body">
 	<!-- 	Imaxe corporativa 🤦🏼‍♀️ -->
 	<img src="../logo.png" alt="Algo falla no logo">
 	<h1> Páxina para modificar o contido do HTML </h1>
-	
+
+	<!-- 	MI EJEMPLO -->
+	<h4> ✎ User: clago y pass: abc123.</h4>	
+	<p>User: <input type="text" id="user"></p>
+	<p>Pass:   <input type="password" id="pass"></p>
+	<button onclick="validarDatos();">Entrar</button>
+
 	<!-- 	exemplo 1 -->
 
 	<h4> ✎ No ficheiro .html fabricamos botóns e un textito ó que lle poñemos un identificador</h4>
